fix(eternal-jukebox): Fix title and visualizer alignment

--- a/custom-apps/eternal-jukebox/src/components/Home.module.scss
+++ b/custom-apps/eternal-jukebox/src/components/Home.module.scss
@@ -1,42 +1,39 @@
 .container {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 80% 1fr;
+    grid-template-rows: min-content minmax(100px, auto) min-content;
+    grid-template-areas:
+        '. title button'
+        '. content .'
+        'stats stats stats';
     height: 100%;
 }
 
-.jukebox-header {
+.title {
+    grid-area: title;
+
     display: flex;
-    justify-content: center;
-    align-items: stretch;
-
-    width: 100%;
-
-    .side {
-        flex-grow: 1;
-
-        display: flex;
-        align-items: start;
-        justify-content: end;
-
-        padding-left: 2rem;
-        padding-right: 2rem;
-    }
-
-    .center {
-        * {
-            text-align: center;
-        }
-    }
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
 }
 
-.visualizer-container {
-    flex-grow: 1;
+.button {
+    grid-area: button;
+
+    display: flex;
+    align-items: start;
+    justify-content: end;
+    padding-right: 2rem;
+}
+
+.content {
+    grid-area: content;
 }
 
 .stats {
-    width: 100%;
+    grid-area: stats;
+
     display: flex;
     justify-content: space-around;
     padding-top: 1rem;
